Permissions CRUD; Product (with Tests) & Role & User fixes; [WIP] Added Logging