@@ -4,12 +4,13 @@ import com.store.application.exceptions.ProductAlreadyExistsException;
 import com.store.application.exceptions.ProductNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.security.test.context.support.WithMockUser;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -18,6 +19,8 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
+@SpringBootTest
+@ExtendWith(MockitoExtension.class)
 class ProductServiceTest {
 
     @Mock
@@ -27,8 +30,7 @@ class ProductServiceTest {
     private ProductService productService;
 
     @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
+    void init() {
     }
 
     @Test
@@ -37,12 +39,12 @@ class ProductServiceTest {
         Product product = new Product();
         product.setName("Test Product");
 
-        when(productRepository.findAll()).thenReturn(Arrays.asList(product));
+        when(productRepository.findAll()).thenReturn(List.of(product));
 
         List<Product> products = productService.getAllProducts();
 
         assertEquals(1, products.size());
-        assertEquals("Test Product", products.get(0).getName());
+        assertEquals("Test Product", products.getFirst().getName());
     }
 
     @Test
@@ -107,12 +109,13 @@ class ProductServiceTest {
         existingProduct.setName("Existing Product");
 
         Product updatedProduct = new Product();
+        updatedProduct.setId(id);
         updatedProduct.setName("Updated Product");
 
         when(productRepository.findById(id)).thenReturn(Optional.of(existingProduct));
         when(productRepository.save(any(Product.class))).thenReturn(updatedProduct);
 
-        Product result = productService.updateProduct(id, updatedProduct);
+        Product result = productService.updateProduct(updatedProduct);
 
         assertEquals("Updated Product", result.getName());
     }
@@ -120,12 +123,11 @@ class ProductServiceTest {
     @Test
     @WithMockUser(roles = "ADMIN")
     void updateProductNotFound() {
-        UUID id = UUID.randomUUID();
         Product updatedProduct = new Product();
 
-        when(productRepository.findById(id)).thenReturn(Optional.empty());
+        when(productRepository.findById(updatedProduct.getId())).thenReturn(Optional.empty());
 
-        assertThrows(ProductNotFoundException.class, () -> productService.updateProduct(id, updatedProduct));
+        assertThrows(ProductNotFoundException.class, () -> productService.updateProduct(updatedProduct));
     }
 
     @Test
@@ -159,12 +161,12 @@ class ProductServiceTest {
         product.setCategory(category);
         product.setName("Test Product");
 
-        when(productRepository.findByCategory(category)).thenReturn(Arrays.asList(product));
+        when(productRepository.findByCategory(category)).thenReturn(List.of(product));
 
         List<Product> products = productService.getProductsByCategory(category);
 
         assertEquals(1, products.size());
-        assertEquals("Test Product", products.get(0).getName());
+        assertEquals("Test Product", products.getFirst().getName());
     }
 
     @Test
